@@ -110,7 +110,9 @@ typedef enum
     SYX_BYTECODE_MARK_ARGUMENTS,
     SYX_BYTECODE_SEND_MESSAGE,
     SYX_BYTECODE_SEND_SUPER,
-    
+    /*    SYX_BYTECODE_SEND_UNARY,
+	  SYX_BYTECODE_SEND_BINARY,*/
+
     SYX_BYTECODE_DO_PRIMITIVE,
     SYX_BYTECODE_DO_SPECIAL,
   
@@ -136,11 +138,5 @@ typedef enum
     SYX_BYTECODE_CONST_FALSE,
     SYX_BYTECODE_CONST_CONTEXT,
   } SyxBytecodeConstant;
-
-typedef enum
-  {
-    SYX_PARSER_ERROR_LOOKUP,
-    SYX_PARSER_ERROR_SYNTAX,
-  } SyxParserError;
 
 #endif /* SYX_ENUMS_H */
